Add gallery elements, lightbox  and style for desktop

--- a/gallery.html
+++ b/gallery.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="description" content="Dog Grooming services"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>DoggyStyle</title>
-</head>
-<body>
-<div class="parallax">
-    <header>
 
-    <!--------------------------------- Navbar - Bootstrap ------------------->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Dog Grooming services" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/lightbox.min.css">
+    <title>DoggyStyle!!!</title>
+</head>
+
+<body class="parallax">
+    <header>
+        <!--------------------------------- Navbar - Bootstrap ------------------->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand ml-auto" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,113 +27,72 @@
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <!-- I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
-                https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-list-of-links-using-css-html  -->
-                <li class="nav-item">  
-                    <a class="nav-link " href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
-                </li>
-                <li class="nav-item current">
-                    <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html"><i class="fas fa-phone"></i><span>Contact</span></a>
-                </li>
-            </ul>
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <!-- I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
+                    https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-list-of-links-using-css-html  -->
+                    <li class="nav-item">
+                        <a class="nav-link " href="index.html"><i class="fas fa-home"></i><span>Home</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
+                    </li>
+                    <li class="nav-item current">
+                        <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html"><i class="fas fa-phone"></i><span>Contact</span></a>
+                    </li>
+                </ul>
             </div>
         </nav>
     </header>
-<!-- -----------------------------Gallery page -------------------------------->
-
-<!---------I got the code for this gallery from the following website and altered it
-for my own use. I used the masonry effect listed on the page. 
- https://wpdatatables.com/css-image-gallery/. ---------------------------------->
-<div></div>
-
-    <div class="gallery" id="gallery">
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog1.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog2.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog3.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog4.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog5.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog6.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/derek2.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog8.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog9.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/derek5.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog11.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/derek1.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/derek3.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/derek4.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog1.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog10.jpg" alt=""></div>
-        </div>
-        <div class="gallery-item">
-            <div class="content"><img src="assets/images/gallery/dog1.jpg" alt=""></div>
+    <!-- -----------------------------Gallery page -------------------------------->
+        
+    <div class="home-container">
+        <div class="gallery">
+            <!-- I used lightbox to create gallery effect 
+            https://lokeshdhakar.com/projects/lightbox2/ 
+            and the following tutorial by 
+            Clever Techie to help me create the gallery 
+            https://clevertechie.com/html-css/157/how-to-create-image-gallery-using-html-css-javascript --->
+            
+            <div class="responsive"><a href="assets/images/gallery/dog1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog1small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog2big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog2small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog3big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog3small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog4big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog4small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog5big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog5small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog6big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog6small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog7big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog7small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog8big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog8small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog9big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog9small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog10big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog10small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/dog11big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog11small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/derek1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek1small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/derek2big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek2small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/derek3big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek3small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/derek4big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/derek4small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/derek5big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek5small.jpg"></a></div>
         </div>
     </div>
-
     <!-- ----------------------------Footer -------------------------------->
-    <footer>
-        <div class="container-fluid" id="footer-row">
-            <div class="row">
-                <div class="col-sm footer-element" id="contact-details">
-                    Phone: 0875553555 <br> Email: info@doggystyle.ie
-                </div>
-                <div class="col-sm" id="call-button-container">
-                    <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
-                </div>
-                <div class="col-sm footer-element" id="social-icons">
-                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-                </div>
+    <footer class="footer mt-auto" id="footer-row">
+        <div class="row">
+            <div class="col-sm footer-element" id="contact-details">
+                Phone: 0875553555 <br> Email: info@doggystyle.ie
+            </div>
+            <div class="col-sm" id="call-button-container">
+                <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
+            </div>
+            <div class="col-sm footer-element" id="social-icons">
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-youtube"></i>
             </div>
         </div>
     </footer>
-<script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="gallery.js"></script>
-</div>
-</body>
-</html>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="assets/js/lightbox-plus-jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body></html>
