Fix spelling errors and add correct class and nametags

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <span><button type="button" class="call-button">Make Appointment</button></span>
         </div>
 
-        <div class="order-1 order-md-2">
+        <div class="splash-image order-1 order-md-2">
             <img src="../../assets/images/dogwash.png">
         </div>
     </div>
