--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         </header>
         <!-- -----------------------------Contact page -------------------------------->
         <div class="form-container">
-            <form action="doggystyle.ie">
+            <form action="#">
 
                 <label for="fname">First Name *</label>
                 <input class="input-box" type="text" id="fname" name="firstname" placeholder="Your name.." required>
@@ -58,7 +58,7 @@
                 <input class="input-box" type="text" id="lname" name="lastname" placeholder="Your last name.." required>
                 
                 <label for="lname">Dogs Name</label>
-                <input class="input-box" type="text" id="lname" name="lastname" placeholder="Fur babies name here.....">
+                <input class="input-box" type="text" id="dname" name="dogname" placeholder="Fur babies name here.....">
 
                 <label for="phone">Phone number *</label>
                 <input class="input-box" type="tel" id="phone" name="phone" required>
