Add media queries for gallery, resolve css class conflict

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <span><button type="button" class="call-button">Make Appointment</button></span>
         </div>
 
-        <div class="splash-image order-1 order-md-2">
-            <img src="../../assets/images/dogwash.png">
+        <div class="order-1 order-md-2">
+            <img class="spash-image" src="../../assets/images/dogwash.png">
         </div>
     </div>
 
