Change homepage image and style main message

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,8 @@
                         Phone: 0875553555 <br> Email: info@doggystyle.ie
                     </div>
                     <div class="col-sm" id="call-button-container">
-                        <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
+                        <a href="contact.html">
+                        <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
                     </div>
                     <div class="col-sm footer-element" id="social-icons">
                         <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
