--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,9 @@
             <div class="responsive"><a href="assets/images/gallery/dog1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog1small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog2big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog2small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog3big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog3small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/derek2big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek2small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog4big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog4small.jpg"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/derek5big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek5small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog5big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog5small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog6big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog6small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog7big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog7small.jpg"></a></div>
@@ -68,10 +70,9 @@
             <div class="responsive"><a href="assets/images/gallery/dog10big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog10small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog11big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog11small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/derek1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek1small.jpg"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/derek2big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek2small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/derek3big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek3small.jpg"></a></div>
             <div class="responsive"><a href="assets/images/gallery/derek4big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/derek4small.jpg"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/derek5big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek5small.jpg"></a></div>
+            
         </div>
     </div>
     <!-- ----------------------------Footer -------------------------------->
@@ -81,7 +82,8 @@
                 Phone: 0875553555 <br> Email: info@doggystyle.ie
             </div>
             <div class="col-sm" id="call-button-container">
-                <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
+                <a href="contact.html">
+                <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
             </div>
             <div class="col-sm footer-element" id="social-icons">
                 <i class="fab fa-twitter-square"></i>
