--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <div class="home-container">
         <div class="main-message order-2 order-md-1">
             <h1>Grubby Dog?</h1>
-            <p>We’ll get them clean in a jiffy! Leave your fur baby with us for
-                the ultimate doggy day spa experience. Guaranteed to leave with a
+            <p>We’ll get them clean in a jiffy!<br><hr> Leave your fur baby with us for
+                the ultimate doggy day spa experience.<br> <hr> Guaranteed to leave with a
                 wagging tail. <br>
                 <i class="fas fa-shower"></i><i class="fas fa-cut"></i>
             </p>
             
-            <span><button type="button" class="call-button">Make Appointment</button></span>
+            <a href="contact.html"><span><button type="button" class="call-button">Make Appointment</button></span></a>
         </div>
 
         <div class="order-1 order-md-2">
@@ -74,7 +74,8 @@
                 Phone: 0875553555 <br> Email: info@doggystyle.ie
             </div>
             <div class="col-sm" id="call-button-container">
-                <button type="button" class="call-button footer-element">Contact DoggyStyle</button>
+            <a href="contact.html">
+                <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
             </div>
             <div class="col-sm footer-element" id="social-icons">
                 <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
