Fix link issue with files for github

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="order-1 order-md-2">
-            <img class="spash-image" src="../../assets/images/dogwash.png">
+            <img class="spash-image" src="assets/images/dogwash.png">
         </div>
     </div>
 
