--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <title>DoggyStyle!!!</title>
 </head>
 
@@ -36,7 +37,6 @@
                         <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
                     </li>
                     <li class="nav-item">
-
                         <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
                     </li>
                     <li class="nav-item">
@@ -62,16 +62,15 @@
         </div>
 
         <div class="order-1 order-md-2">
-            <img class="spash-image" src="assets/images/dogwash.png">
+            <a class="nav-link" href="gallery.html"><img class="spash-image" src="assets/images/dogwash.png"></a>
         </div>
     </div>
-
 
     <!-- ----------------------------Footer -------------------------------->
     <footer class="footer mt-auto" id="footer-row">
         <div class="row">
             <div class="col-sm footer-element" id="contact-details">
-                Phone: 0875553555 <br> Email: info@doggystyle.ie
+                Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
             </div>
             <div class="col-sm" id="call-button-container">
             <a href="contact.html">
