--- a/prices.html
+++ b/prices.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <title>DoggyStyle</title>
 </head>
 
@@ -201,7 +202,7 @@
         <div class="container-fluid" id="footer-row">
             <div class="row">
                 <div class="col-sm footer-element" id="contact-details">
-                    Phone: 0875553555 <br> Email: info@doggystyle.ie
+                    Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
                 </div>
                 <div class="col-sm" id="call-button-container">
                     <a href="contact.html">
