Fix bug with Footer and header gap on rhs

--- a/gallery.html
+++ b/gallery.html
@@ -81,20 +81,22 @@
         </div>
     </div>
     <!-- ----------------------------Footer -------------------------------->
-    <footer class="footer mt-auto" id="footer-row">
-        <div class="row">
-            <div class="col-sm footer-element" id="contact-details">
-                Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a> 
-            </div>
-            <div class="col-sm" id="call-button-container">
-                <a href="contact.html">
-                <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
-            </div>
-            <div class="col-sm footer-element" id="social-icons">
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-instagram-square"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-youtube"></i>
+    <footer>
+        <div class="container-fluid footer-row">
+            <div class="row">
+                <div class="col-sm footer-element" id="contact-details">
+                    Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
+                </div>
+                <div class="col-sm" id="call-button-container">
+                    <a href="contact.html">
+                    <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
+                </div>
+                <div class="col-sm footer-element" id="social-icons">
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                </div>
             </div>
         </div>
     </footer>
