--- a/prices.html
+++ b/prices.html
@@ -199,7 +199,7 @@
     <div class="empty-space"></div>
     <!-- ----------------------------Footer -------------------------------->
     <footer>
-        <div class="container-fluid" id="footer-row">
+        <div class="container-fluid footer-row">
             <div class="row">
                 <div class="col-sm footer-element" id="contact-details">
                     Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
