--- a/contact.html
+++ b/contact.html
@@ -79,25 +79,25 @@
         <div class="empty-space"></div>
 
         <!-- ----------------------------Footer -------------------------------->
-        <footer>
-            <div class="container-fluid" id="footer-row">
-                <div class="row">
-                    <div class="col-sm footer-element" id="contact-details">
-                        Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
-                    </div>
-                    <div class="col-sm" id="call-button-container">
-                        <a href="contact.html">
-                        <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
-                    </div>
-                    <div class="col-sm footer-element" id="social-icons">
-                        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-                    </div>
+     <footer>
+        <div class="container-fluid footer-row">
+            <div class="row">
+                <div class="col-sm footer-element" id="contact-details">
+                    Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
+                </div>
+                <div class="col-sm" id="call-button-container">
+                    <a href="contact.html">
+                    <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
+                </div>
+                <div class="col-sm footer-element" id="social-icons">
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
