--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
         </nav>
     </header>
     <!-- -----------------------------Home page -------------------------------->
+  <!--
+https://stackoverflow.com/questions/52324561/bootstrap-4-how-to-change-the-order-of-a-columns-when-the-screen-size-changes
+I used the code in this link to help me order the elements differently depending on the page size
 
-
+ ---->
     <div class="home-container">
         <div class="main-message order-2 order-md-1">
             <h1>Grubby Dog?</h1>
@@ -57,30 +60,30 @@
                 wagging tail. <br>
                 <i class="fas fa-shower"></i><i class="fas fa-cut"></i>
             </p>
-            
             <a href="contact.html"><span><button type="button" class="call-button">Make Appointment</button></span></a>
         </div>
-
         <div class="order-1 order-md-2">
             <a class="nav-link" href="gallery.html"><img class="spash-image" src="assets/images/dogwash.png"></a>
         </div>
     </div>
 
     <!-- ----------------------------Footer -------------------------------->
-    <footer class="footer mt-auto" id="footer-row">
-        <div class="row">
-            <div class="col-sm footer-element" id="contact-details">
-                Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
-            </div>
-            <div class="col-sm" id="call-button-container">
-            <a href="contact.html">
-                <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
-            </div>
-            <div class="col-sm footer-element" id="social-icons">
-                <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+ <footer>
+        <div class="container-fluid footer-row">
+            <div class="row">
+                <div class="col-sm footer-element" id="contact-details">
+                    Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
+                </div>
+                <div class="col-sm" id="call-button-container">
+                    <a href="contact.html">
+                    <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
+                </div>
+                <div class="col-sm footer-element" id="social-icons">
+                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                </div>
             </div>
         </div>
     </footer>
