Add gallery title and style

--- a/gallery.html
+++ b/gallery.html
@@ -49,16 +49,15 @@
     </header>
     <!-- -----------------------------Gallery page -------------------------------->
         
-    <div class="home-container">
-    <div class="image-container">
+    <div class="home-container gallery-container">
+        <div class="image-container gallery-title">
             <img src="assets/images/pricesbone1.png">
-            <p>Prices</p>
+            <p>Gallery</p>
         </div>
         <div class="gallery">
             <!-- I used lightbox to create gallery effect 
             https://lokeshdhakar.com/projects/lightbox2/ 
-            and the following tutorial by 
-            Clever Techie to help me create the gallery 
+            and the following tutorial by Clever Techie to help me create the gallery 
             https://clevertechie.com/html-css/157/how-to-create-image-gallery-using-html-css-javascript --->
             
             <div class="responsive"><a href="assets/images/gallery/dog1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog1small.jpg" alt="Dog in bath"></a></div>
