Tweek media queries for homepage

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ I used the code in this link to help me order the elements differently depending
             </p>
             <a href="contact.html"><span><button type="button" class="call-button">Make Appointment</button></span></a>
         </div>
-        <div class="order-1 order-md-2">
-            <a class="nav-link" href="gallery.html"><img class="spash-image" src="assets/images/dogwash.png"></a>
+        <div class="splash-image order-1 order-md-2">
+            <a class="nav-link" href="gallery.html"><img src="assets/images/dogwash.png"></a>
         </div>
     </div>
 
