Fix footer issue, style mobile gallery, fix margins

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                 </button>
                 <div id="logo">
                     <a href="index.html">
-                        <img src="assets/images/dslogo.png">
+                        <img src="assets/images/dslogo.png" alt="Doggy Style logo image">
                     </a> 
                 </div>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -85,7 +85,7 @@
                 <div class="col-sm footer-element" id="contact-details">
                     Phone: 0875553555 <br><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie</a>
                 </div>
-                <div class="col-sm" id="call-button-container">
+                <div class="col-sm call-button-container contact-page-button">
                     <a href="contact.html">
                     <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
                 </div>
