--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
             <div id="logo">
                 <a href="index.html">
-                    <img src="assets/images/dslogo.png">
+                    <img src="assets/images/dslogo.png" alt="Doggy Style logo image">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -63,7 +63,7 @@ I used the code in this link to help me order the elements differently depending
             <a href="contact.html"><span><button type="button" class="call-button">Make Appointment</button></span></a>
         </div>
         <div class="splash-image order-1 order-md-2">
-            <a class="nav-link" href="gallery.html"><img src="assets/images/dogwash.png"></a>
+            <a class="nav-link" href="gallery.html"><img src="assets/images/dogwash.png" alt="images of dogs being washed"></a>
         </div>
     </div>
 
