--- a/prices.html
+++ b/prices.html
@@ -22,7 +22,7 @@
             </button>
             <div id="logo">
                 <a href="index.html">
-                    <img src="assets/images/dslogo.png">
+                    <img src="assets/images/dslogo.png" alt="Doggy Style logo image">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -49,7 +49,7 @@
 
     <div class="container-fluid" id="main-prices">
         <div class="image-container">
-            <img src="assets/images/pricesbone1.png">
+            <img src="assets/images/pricesbone1.png" alt="dog bone with prices text">
             <p>Prices</p>
         </div>
         <div class="row">
