--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
             </button>
             <div id="logo">
                 <a href="index.html">
-                    <img src="assets/images/dslogo.png">
+                    <img src="assets/images/dslogo.png" alt="Doggy Style logo image">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -51,7 +51,7 @@
         
     <div class="home-container gallery-container">
         <div class="image-container gallery-title">
-            <img src="assets/images/pricesbone1.png">
+            <img src="assets/images/pricesbone1.png" alt="dog bone with gallery text">
             <p>Gallery</p>
         </div>
         <div class="gallery">
@@ -76,7 +76,10 @@
             <div class="responsive"><a href="assets/images/gallery/derek1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek1small.jpg" alt="dog in water"></a></div>
             <div class="responsive"><a href="assets/images/gallery/derek3big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek3small.jpg" alt="dog panting"></a></div>
             <div class="responsive"><a href="assets/images/gallery/derek4big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/derek4small.jpg" alt="dog in field of flowers"></a></div>
-            
+            <div class="responsive"><a href="assets/images/gallery/lassie1big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/lassie1small.jpg" alt="collie dog close up shot"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/lassie2big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/lassie2small.jpg" alt="2 collie dogs in field with rainbow"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/jackson1big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/jackson1small.jpg" alt="small blonde dog on patio"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/jackson2big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/jackson2small.jpg" alt="small blonde dog with hat"></a></div>
         </div>
     </div>
     <!-- ----------------------------Footer -------------------------------->
