Adjustment in margins of prices and gallery pages

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ I used the code in this link to help me order the elements differently depending
 
  ---->
     <div class="home-container">
-        <div class="main-message order-2 order-md-1">
+        <div class="main-message order-2 order-lg-1">
             <h1>Grubby Dog?</h1>
             <p>We’ll get them clean in a jiffy!<br><hr> Leave your fur baby with us for
                 the ultimate doggy day spa experience.<br> <hr> Guaranteed to leave with a
@@ -62,7 +62,7 @@ I used the code in this link to help me order the elements differently depending
             </p>
             <a href="contact.html"><span><button type="button" class="call-button">Make Appointment</button></span></a>
         </div>
-        <div class="splash-image order-1 order-md-2">
+        <div class="splash-image order-1 order-lg-2">
             <a class="nav-link" href="gallery.html"><img src="assets/images/dogwash.png" alt="images of dogs being washed"></a>
         </div>
     </div>
