--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,9 @@
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <title>DoggyStyle</title>
 </head>
-
 <body>
     <div class="parallax">
         <header>
-
             <!--------------------------------- Navbar - Bootstrap ------------------->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand ml-auto" href="#"></a>
@@ -38,7 +36,6 @@
                             <a class="nav-link" href="prices.html"><i class="fas fa-paw"></i><span>Prices</span></a>
                         </li>
                         <li class="nav-item">
-
                             <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i><span>Gallery</span></a>
                         </li>
                         <li class="nav-item current">
@@ -59,7 +56,7 @@
                 <input class="input-box" type="text" id="lname" name="lastname" placeholder="Your last name.." required>
                 
                 <label for="lname">Dogs Name</label>
-                <input class="input-box" type="text" id="dname" name="dogname" placeholder="Fur babies name here.....">
+                <input class="input-box" type="text" id="dname" name="dogname" placeholder="Fur baby's name here.....">
 
                 <label for="phone">Phone number *</label>
                 <input class="input-box" type="tel" id="phone" name="phone" required>
@@ -77,9 +74,8 @@
         <!-- I put this 'empty space div below the contact form as I was having a problem with scrolling
             as the bottom of the contact form was dragging up white space instead of showing the background ---->
         <div class="empty-space"></div>
-
         <!-- ----------------------------Footer -------------------------------->
-     <footer>
+    <footer>
         <div class="container-fluid footer-row">
             <div class="row">
                 <div class="col-sm footer-element" id="contact-details">
