--- a/gallery.html
+++ b/gallery.html
@@ -70,16 +70,18 @@
             <div class="responsive"><a href="assets/images/gallery/dog6big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog6small.jpg" alt="small dog in bath"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog7big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog7small.jpg" alt="brown dog in bath"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog8big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog8small.jpg" alt="unhappy wet dog"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog9big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog9small.jpg" alt="small white toy dog"></a></div>
+            <div class="responsive hideforsymmetry"><a href="assets/images/gallery/dog9big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog9small.jpg" alt="small white toy dog"></a></div>
             <div class="responsive"><a href="assets/images/gallery/dog10big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog10small.jpg" alt="small dog"></a></div>
-            <div class="responsive"><a href="assets/images/gallery/dog11big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/dog11small.jpg" alt="toy poodle"></a></div>
             <div class="responsive"><a href="assets/images/gallery/derek1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek1small.jpg" alt="dog in water"></a></div>
             <div class="responsive"><a href="assets/images/gallery/derek3big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/derek3small.jpg" alt="dog panting"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/jade1big.jpg" data-lightbox="mygallery"><img src="assets/images/gallery/jade1small.jpg" alt="black and white collie"></a></div>
             <div class="responsive"><a href="assets/images/gallery/derek4big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/derek4small.jpg" alt="dog in field of flowers"></a></div>
+            <div class="responsive"><a href="assets/images/gallery/penny1big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/penny1small.jpg" alt="brown and white collie"></a></div>
             <div class="responsive"><a href="assets/images/gallery/lassie1big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/lassie1small.jpg" alt="collie dog close up shot"></a></div>
             <div class="responsive"><a href="assets/images/gallery/lassie2big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/lassie2small.jpg" alt="2 collie dogs in field with rainbow"></a></div>
             <div class="responsive"><a href="assets/images/gallery/jackson1big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/jackson1small.jpg" alt="small blonde dog on patio"></a></div>
             <div class="responsive"><a href="assets/images/gallery/jackson2big.jpg" data-lightbox="mygallery"> <img src="assets/images/gallery/jackson2small.jpg" alt="small blonde dog with hat"></a></div>
+            
         </div>
     </div>
     <!-- ----------------------------Footer -------------------------------->
