--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
-    <title>DoggyStyle!!!</title>
+    <title>DoggyStyle - Dog Grooming Services</title>
 </head>
 
 <body class="parallax">
@@ -51,9 +51,9 @@
 https://stackoverflow.com/questions/52324561/bootstrap-4-how-to-change-the-order-of-a-columns-when-the-screen-size-changes
 I used the code in this link to help me order the elements differently depending on the page size
 
- ---->
+---->
     <div class="home-container">
-        <div class="main-message order-2 order-lg-1">
+        <div class="main-message order-2 order-md-1">
             <h1>Grubby Dog?</h1>
             <p>We’ll get them clean in a jiffy!<br><hr> Leave your fur baby with us for
                 the ultimate doggy day spa experience.<br> <hr> Guaranteed to leave with a
@@ -62,13 +62,13 @@ I used the code in this link to help me order the elements differently depending
             </p>
             <a href="contact.html"><span><button type="button" class="call-button">Make Appointment</button></span></a>
         </div>
-        <div class="splash-image order-1 order-lg-2">
+        <div class="splash-image order-1 order-md-2">
             <a class="nav-link" href="gallery.html"><img src="assets/images/dogwash.png" alt="images of dogs being washed"></a>
         </div>
     </div>
 
     <!-- ----------------------------Footer -------------------------------->
- <footer>
+<footer>
         <div class="container-fluid footer-row">
             <div class="row">
                 <div class="col-sm footer-element" id="contact-details">
