Add aria labels and noopener rel on footer elements

--- a/contact.html
+++ b/contact.html
@@ -84,13 +84,13 @@
                 </div>
                 <div class="col-sm call-button-container contact-page-button">
                     <a href="contact.html">
-                    <button type="button" class="call-button footer-element">Contact DoggyStyle</button></a>
+                    <button type="button" aria-label="cContact Doggystyle" class="call-button footer-element">Contact DoggyStyle</button></a>
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
-                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://twitter.com/" aria-label="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="instagram" target="_blank" rel="noopener"><i class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.facebook.com/" aria-label="facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.youtube.com/" aria-label="youtube" target="_blank" rel="noopener"><i class="fab fa-youtube" ></i></a>
                 </div>
             </div>
         </div>
