--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
 
             </form>
         </div>
-         <!-- ------------------Google map location -------------------------------->
-        <div class="map form-container">
+        <!--------------------Google map location -------------------------------->
+        <div class="map form-container" id="map">
             <h1>Our location</h1>
             <p>DoggyStyle Ltd.<br>No.1 Main Street,<br>Phibsborough,<br>Dublin 7</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9524.276514564774!2d-6.281154660859138!3d53.35991773539866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670dd46b325a31%3A0x2600c7a7bb391652!2sPhibsborough%2C%20Dublin!5e0!3m2!1sen!2sie!4v1605958559989!5m2!1sen!2sie" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
@@ -89,11 +89,13 @@
                     <span><a href="tel:0875553555">Call us: 0875553555<i class="fas fa-phone"></i></a></span><br>
                     <span><a href="mailto:info@doggystyle.ie">Email: info@doggystyle.ie<i class="fas fa-envelope"></i></a></span>
                 </div>
+                
                 <div class="col-sm call-button-container contact-page-button">
                     <a href="contact.html">
                     <button type="button" aria-label="cContact Doggystyle" class="call-button footer-element">Contact DoggyStyle</button></a>
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
+                    <a href="contact.html#map"> <i class="fas fa-map-marked-alt"></i></a>
                     <a href="https://twitter.com/" aria-label="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
                     <a href="https://www.instagram.com/" aria-label="instagram" target="_blank" rel="noopener"><i class="fab fa-instagram-square"></i></a>
                     <a href="https://www.facebook.com/" aria-label="facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
