--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ I used the code in this link to help me order the elements differently depending
                     <button type="button"  class="call-button footer-element">Contact DoggyStyle</button></a>
                 </div>
                 <div class="col-sm footer-element" id="social-icons">
+                    <a href="contact.html#map"> <i class="fas fa-map-marked-alt"></i></a>
                     <a href="https://twitter.com/" aria-label="Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
                     <a href="https://www.instagram.com/" aria-label="instagram" target="_blank" rel="noopener"><i class="fab fa-instagram-square"></i></a>
                     <a href="https://www.facebook.com/" aria-label="facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
